# chaosRouter

./: .gitignore  LICENSE  README.md  chaosRouter.py  chaosRouter.spec  make_test_6layer.py  pyproject.toml  render_area.py  render_nets.py  route_board.py  rust_route.py
.github/workflows/: build.yml  tests.yml
chaosrouter/: __init__.py  astar_kernel.py  balanced.py  cli.py  curves.py  diffpair.py  drc.py  dsn.py  fanout.py  fastcopper.py  fields.py  geom_kernels.py  grid.py  gui.py  model.py  mp_route.py  pathfinder.py  pipeline.py  planes.py  planner.py  router.py  ses.py  sexp.py  version.py  viz.py
chaosrouter/assets/: icon.icns
rust/: BUILD.md  Cargo.toml  pyproject.toml
rust/src/: astar.rs  collision.rs  engine.rs  fields.rs  geom.rs  lib.rs
tests/: boards.py  test_dsn_units.py  test_geom_kernels.py  test_routing.py  test_ses.py
tools/: make_demo_gif.py  make_icon.py
