[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosrouter"
version = "0.2.9"
description = "chaosRouter — a curved-trace PCB autorouter for Specctra DSN exports (DipTrace and any DSN-capable CAD)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CodeMesserMaster" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "shapely>=2.0",
    "numba",
    "matplotlib",
]

[project.optional-dependencies]
gui = ["PySide6"]

[project.scripts]
chaosrouter = "chaosrouter.cli:main"

[project.gui-scripts]
chaosrouter-gui = "chaosrouter.gui:main"

[tool.setuptools]
packages = ["chaosrouter"]

[tool.setuptools.package-data]
chaosrouter = ["assets/*"]
